# deisa

./: AUTHORS  Coupling.sh  LICENSE  README.md  Script.sh  client.py  dask_interface.py  postscript.py  setup.cfg  setup.py  simulation.c  simulation.yml  spack.yml
.ipynb_checkpoints/: Launcher-checkpoint.sh  Script-checkpoint.sh  client-checkpoint.py  dask_interface-checkpoint.py  prescript-checkpoint.py  simulation-checkpoint.c  simulation-checkpoint.yml
cmake/: FindPython3.cmake
deisa/: pyproject.toml  setup.cfg
deisa/src/deisa/: deisa.py
docs/: README.md
example/: CMakeLists.txt  Launcher.sh  derivative.py  simulation.c  simulation.yml
example/scripts/: Launcher.sh  Script.sh  prescript.py
pdi-plugin/: CMakeLists.txt  deisa.cxx
pdiplugin-deisa/: CMakeLists.txt  deisa.cxx
pdiplugin-deisa/cmake/: FindAstyle.cmake  FindPython3Path.cmake
pdiplugin-deisa/cmake/FindPython/: Support.cmake
pydeisa/: pydeisa.py  pyproject.toml
python-src/deisa/: __init__.py  __version__.py  deisa.py
src/: deisa.cxx
