[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deisa"
version = "0.2.0"
authors = [
  { name="A. Gueroudji", email="amal.gueroudji@cea.fr" },
]
description = ""
readme = ""
requires-python = ">=3.9"
dependencies = [
    "PyYAML",
    "dask[distributed]"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]

[project.urls]
"Homepage" = "https://github.com/GueroudjiAmal/deisa"
