[metadata]
name = deisa
version = attr: deisa.deisa.VERSION
author = A. Gueroudji
author_email = amal.gueroudji@cea.fr
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
package_dir=
    =src
packages=find:
install_requires =
    PyYAML
    dask[distributed]

[options.packages.find]
where=src
